<resources>
    <string name="app_name">Doodhbhandaar Vendor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_cart">View Cart</string>
    <string name="add">Add to cart</string>
    <string name="remove">Remove</string>
    <string name="place_order">Place Order</string>
    <string name="confirm_order">Confirm Order (₹ %s)</string>
    <string name="update_order_s">Update Order (₹ %s)</string>

    <string name="order_date">Order Date : %s</string>
    <string name="schedule_date">Schedule Date : %s</string>
    <string name="date_s">( %s )</string>
    <string name="bill_amount_s">Bill Amount:₹ %s</string>
    <string name="doodhbhandaar">Doodhbhandaar</string>
    <string name="red">#ec4c4c</string>
    <string name="rs_s">₹ %s</string>
    <string name="price_s">Amount:₹ %s</string>

    <string name="quantity_s">Quantity:%s</string>
    <string name="total_qty_s">Total QTY | %s</string>
    <string name="cost_per_day_s">Cost per day: ₹%s</string>
    <string name="estimated_total_cost_of_month_s">Estimated total cost of month: ₹%s</string>
    <string name="plan_selected_s">Plan selected: %s</string>


</resources>
