<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:scrollbars="vertical"
    >

    <LinearLayout
        android:id="@+id/ll_orderNo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#F8F7FD"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_orderNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="ORDER NO:"
            android:textAllCaps="true"
            android:textSize="1sp" />

        <TextView
            android:id="@+id/orderNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="ORDER NO:"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>



    <TextView
        android:id="@+id/orderDate"
        android:layout_below="@id/ll_orderNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:gravity="end"
        android:padding="4dp"
        android:text="@string/order_date"
        android:textColor="#ff7d18"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scheduleDate"
        android:layout_below="@id/orderDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:gravity="end"
        android:padding="4dp"
        android:text="@string/schedule_date"
        android:textColor="#ff7d18"
        android:textSize="16sp"
        android:textStyle="bold" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_order_products"
        android:layout_below="@+id/scheduleDate"
        android:layout_above="@id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_order_detail_name_qty" />

    <View
        android:id="@+id/view"
        android:layout_above="@+id/tv_totalPrice"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="2dp"
        android:background="#000"/>

    <TextView
        android:id="@+id/tv_totalPrice"
        android:layout_above="@id/tv_productStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bill_amount_s"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="16sp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:padding="6dp"/>
    <TextView
        android:id="@+id/tv_productStatus"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="10dp"
        android:text="Status"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_productStatusDate"
        android:layout_toEndOf="@id/tv_productStatus"
        android:layout_below="@id/tv_totalPrice"
        android:textStyle="italic"
        android:layout_marginStart="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_s"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>