<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="6dp"
        android:background="#ffffff"
        android:text="Product Name"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_totalQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:padding="2dp"
        android:layout_marginBottom="6dp"
        android:background="#ffffff"
        android:text="@string/total_qty_s"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_product_name"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tv_cost_perDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:padding="2dp"
        android:layout_marginBottom="6dp"
        android:background="#ffffff"
        android:text="@string/cost_per_day_s"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_totalQty"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tv_estimatedCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:padding="2dp"
        android:layout_marginBottom="6dp"
        android:background="#ffffff"
        android:text="@string/estimated_total_cost_of_month_s"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_cost_perDay"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tv_selectedPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:padding="2dp"
        android:layout_marginBottom="6dp"
        android:background="#ffffff"
        android:text="@string/plan_selected_s"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_estimatedCost"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:id="@+id/tv_payment_collectionDate"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_selectedPlan"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="6dp"
        android:padding="2dp"
        android:layout_marginTop="16dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:text="Select the payment collection date"/>

    <Button
        android:id="@+id/btn_choose"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_selectedPlan"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Choose"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:textColor="#fff"
        android:elevation="2dp"
        android:background="#f57083"/>


    <TextView
        android:id="@+id/tv_applyPromoCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_choose"
        android:layout_marginTop="10dp"
        android:text="Apply Promo Code"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textColor="#f57083"
        android:background="#fffcf7"/>
    <View
        android:layout_width="160dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_applyPromoCode"
        android:background="#f57083"/>


</androidx.constraintlayout.widget.ConstraintLayout>